# verbatim-legacy

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: config.hpp  dictionaries.hpp  dictionarynodes.hpp  edlfile.hpp  filesink.hpp  functor.hpp  helpers.hpp  node.hpp  ptparser.hpp  ptxedlstructure.hpp  radixtrie.hpp  ttml1dictionary.hpp  versions.hpp  xmlfile.hpp
include/dictionaries/: attributes.hpp  node_tt_head.hpp  node_tt_tt.hpp  nodes.hpp  valueexpressions.hpp
include/prototype/: ttml.hpp  tupleaccess.hpp  validatettml.hpp  validatingtree.hpp
src/: dictionaries.cpp  edlfile.cpp  edltool.cpp  filesink.cpp  helpers.cpp  node.cpp  ptparser.cpp  ptxedlstructure.cpp  radixtrie.cpp  versions.cpp  xmlfile.cpp
src/application/: aapgetlines.cpp  parsettml.cpp  pttool.cpp  validatingnode.cpp
src/prototype/: parsettml.cpp  ttmldictionary.cpp  tupleaccess.cpp  validatettml.cpp  validatingtree.cpp
tests/: catch2.cpp  nodeid.cpp  test_catch2.cpp  test_validatingnode.cpp  validatingnode.cpp
